feat: refactor UserTestServiceImpl for improved readability and maintainability